[package]
name = "blockchain_with_wallets_and_transactions"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = "2.1.1"
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
bincode = { version = "2.0.1", features = ["derive"]}
sha2 = "0.10.9"